--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:XQz1SzJO6Wq/evf2ttnmKCXpHdp9g4/t+5T/z9q6rTQ=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://127.0.0.1:8000/
+APP_URL=http://localhost/erpgo
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
